--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "gh-pages": "^2.0.0"
+    "gh": "^1.13.4",
+    "gh-pages": "^2.0.0",
+    "pages": "^0.0.16"
   }
 }
